# phy-harness

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/skills/robot-manipulation-task-loop/: SKILL.md  reference.md
artifacts/base_rotation/: joints.csv  metrics.txt  rollout.joints_base.json  rollout.vlm.json  validation_manifest.json
artifacts/box_pick/: joints.csv  metrics.txt  rollout.vlm_transcript.json
artifacts/cable_routing/: joints.csv  metrics.txt  policy_debug.jsonl  rollout_diagnostics.json
artifacts/inspection/: joints.csv  metrics.txt
artifacts/path_tracing/: joints.csv  metrics.txt
artifacts/shoulder_rotation/: joints.csv
docs/: index.html
examples/: simulate_policy.example.yaml  validation.example.yaml
examples/task/: README.md  base_rotation.py  base_rotation.yaml
policies/: simulate_policy.example.yaml
policies/impl/: README.md
policies/impl/base_rotation/: base_rotation.py  base_rotation.yaml
policies/impl/box_pick/: box_pick.py  box_pick.yaml
policies/impl/cable_routing/: cable_routing.py  cable_routing.yaml
policies/impl/inspection/: inspection.py  inspection.yaml
policies/impl/path_tracing/: path_tracing.py  path_tracing.yaml
policies/impl/shoulder_rotation/: shoulder_rotation.py  shoulder_rotation.yaml
scripts/: simulate_policy.py  validate_rollout.py
src/robot_manipulation_sim/: __init__.py  cameras.py  env.py  simulate_config.py
tests/: test_base_rotation.py  test_box_pick.py  test_cable_routing.py  test_camera_projection.py  test_cameras.py  test_cameras_depth.py  test_env.py  test_gripper_control_finger_geometry.py  test_inspection.py  test_joints_csv_base_rotation.py  test_joints_csv_trajectory.py  test_path_tracing.py  test_robot_manipulation_loop.py  test_shoulder_rotation.py  test_simulate_config.py  test_simulate_policy_joint_log.py  test_validation_util.py  test_validation_yaml.py  test_vision_service.py  test_vlm_rollout_dry.py  test_vlm_task_from_policy.py
(+35 files in other folders)
